styling - fix menu removal overlap issue and task index overlap issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -128,6 +128,8 @@ $xl-desktop: 1260px;
                     grid-template-columns: 180px 1fr;
                 }
             }
+
+            
         }
 
         @include xlDesktop{
@@ -341,8 +343,16 @@ $xl-desktop: 1260px;
             grid-column-end: 3;
             grid-row-start: 1;
             grid-row-end: 2;
-            padding-bottom: 3px;
+            padding: 0 0 0 30px;
             // height:100%;
+
+            @include xlDesktop{
+                padding: 0 0 0 10px;
+            }
+        }
+
+        .mti-no-menu{
+            padding: 0 0 0 5px;
         }
 
         .main-list-details{
